tests/dataset/tpc-ds/compiler/cpp/q70.error
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:71:12: error: ‘s’ was not declared in this scope
   71 |   decltype(s.s_state) state;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:71:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:72:12: error: ‘s’ was not declared in this scope
   72 |   decltype(s.s_county) county;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:72:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:75:12: error: ‘ss’ was not declared in this scope
   75 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:75:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:76:12: error: ‘d’ was not declared in this scope
   76 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:76:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:77:12: error: ‘s’ was not declared in this scope
   77 |   decltype(s) s;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:77:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:237:33: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  237 |           auto __key = Result{s.s_state, s.s_county};
      |                               ~~^~~~~~~
      |                                 |
      |                                 std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:241:45: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  241 |               __g.items.push_back(__struct5{ss, d, s});
      |                                             ^~
      |                                             |
      |                                             StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:248:67: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  248 |                 __struct6{__key, std::vector<__struct5>{__struct5{ss, d, s}}});
      |                                                                   ^~
      |                                                                   |
      |                                                                   StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:248:76: error: no matching function for call to ‘std::vector<__struct5>::vector(<brace-enclosed initializer list>)’
  248 |                 __struct6{__key, std::vector<__struct5>{__struct5{ss, d, s}}});
      |                                                                            ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; value_type = std::vector<__struct5>::value_type; allocator_type = std::allocator<__struct5>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; allocator_type = std::allocator<__struct5>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:261:66: error: request for member ‘ss_net_profit’ in ‘std::declval<__struct5>().__struct5::ss’, which is of non-class type ‘int’
  261 |                            decltype(std::declval<__struct5>().ss.ss_net_profit)>
      |                                                                  ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:261:66: error: request for member ‘ss_net_profit’ in ‘std::declval<__struct5>().__struct5::ss’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:261:80: error: template argument 1 is invalid
  261 |                            decltype(std::declval<__struct5>().ss.ss_net_profit)>
      |                                                                                ^
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:261:80: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:264:34: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  264 |                          __items.push_back(x.ss.ss_net_profit);
      |                                  ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:264:49: error: request for member ‘ss_net_profit’ in ‘x.__struct5::ss’, which is of non-class type ‘int’
  264 |                          __items.push_back(x.ss.ss_net_profit);
      |                                                 ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:259:24:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:258:49: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  258 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:258:60: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  258 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                          ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:255:24: error: no matching function for call to ‘std::vector<std::pair<__struct8, __struct7> >::push_back(<brace-enclosed initializer list>)’
  255 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  256 |           {__struct8{g.key.state, g.key.county},
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  257 |            __struct7{g.key.state, g.key.county, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  258 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  259 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  260 |                        std::vector<
      |                        ~~~~~~~~~~~~
  261 |                            decltype(std::declval<__struct5>().ss.ss_net_profit)>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  262 |                            __items;
      |                            ~~~~~~~~
  263 |                        for (auto x : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  264 |                          __items.push_back(x.ss.ss_net_profit);
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  265 |                        }
      |                        ~
  266 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  267 |                      })())}});
      |                      ~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<__struct8, __struct7>; _Alloc = std::allocator<std::pair<__struct8, __struct7> >; value_type = std::pair<__struct8, __struct7>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<__struct8, __struct7> >::value_type&’ {aka ‘const std::pair<__struct8, __struct7>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<__struct8, __struct7>; _Alloc = std::allocator<std::pair<__struct8, __struct7> >; value_type = std::pair<__struct8, __struct7>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<__struct8, __struct7> >::value_type&&’ {aka ‘std::pair<__struct8, __struct7>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq702749909962/001/prog.cpp:277:5: error: conversion from ‘vector<__struct7>’ to non-scalar type ‘vector<__struct5>’ requested
  226 |   std::vector<__struct5> result = ([&]() {
      |                                   ~~~~~~~~
  227 |     std::vector<__struct6> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  228 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  229 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  230 |         if (!((d.d_date_sk == ss.ss_sold_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  231 |           continue;
      |           ~~~~~~~~~
  232 |         for (auto s : store) {
      |         ~~~~~~~~~~~~~~~~~~~~~~
  233 |           if (!((s.s_store_sk == ss.ss_store_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  234 |             continue;
      |             ~~~~~~~~~
  235 |           if (!(((d.d_month_seq >= dms) && (d.d_month_seq <= (dms + 11)))))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  236 |             continue;
      |             ~~~~~~~~~
  237 |           auto __key = Result{s.s_state, s.s_county};
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  238 |           bool __found = false;
      |           ~~~~~~~~~~~~~~~~~~~~~
  239 |           for (auto &__g : __groups) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  240 |             if (__g.key == __key) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
  241 |               __g.items.push_back(__struct5{ss, d, s});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  242 |               __found = true;
      |               ~~~~~~~~~~~~~~~
  243 |               break;
      |               ~~~~~~
  244 |             }
      |             ~
  245 |           }
      |           ~
  246 |           if (!__found) {
      |           ~~~~~~~~~~~~~~~
  247 |             __groups.push_back(
      |             ~~~~~~~~~~~~~~~~~~~
  248 |                 __struct6{__key, std::vector<__struct5>{__struct5{ss, d, s}}});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  249 |           }
      |           ~
  250 |         }
      |         ~
  251 |       }
      |       ~
  252 |     }
      |     ~
  253 |     std::vector<std::pair<__struct8, __struct7>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  254 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  255 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  256 |           {__struct8{g.key.state, g.key.county},
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  257 |            __struct7{g.key.state, g.key.county, ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  258 |                        return std::accumulate(v.begin(), v.end(), 0.0);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  259 |                      })(([&]() {
      |                      ~~~~~~~~~~~
  260 |                        std::vector<
      |                        ~~~~~~~~~~~~
  261 |                            decltype(std::declval<__struct5>().ss.ss_net_profit)>
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  262 |                            __items;
      |                            ~~~~~~~~
  263 |                        for (auto x : g.items) {
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~
  264 |                          __items.push_back(x.ss.ss_net_profit);
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  265 |                        }
      |                        ~
  266 |                        return __items;
      |                        ~~~~~~~~~~~~~~~
  267 |                      })())}});
      |                      ~~~~~~~~~
  268 |     }
      |     ~
  269 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  270 |       return std::tie(a.first.f0, a.first.f1) <
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  271 |              std::tie(b.first.f0, b.first.f1);
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  272 |     });
      |     ~~~
  273 |     std::vector<__struct7> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  274 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  275 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  276 |     return __res;
      |     ~~~~~~~~~~~~~
  277 |   })();
      |   ~~^~
